# AlphaWorks

./: README.md  git.sh
Qml/Anchor_layout/: CMakeLists.txt  Main.qml  main.cpp
Qml/Animation/: CMakeLists.txt  Main.qml  main.cpp
Qml/Color_gradiant/: CMakeLists.txt  main.cpp
Qml/FocusScope/: CMakeLists.txt  InputField.qml  main.cpp
Qml/Mousetouching/: CMakeLists.txt  main.cpp
Qml/Qtobject/: Qtobject.pro  main.cpp  main.qml  user.cpp  user.h  userlist.cpp  userlist.h
Qml/build-Anchor_layout-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appanchor_layout_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
Qml/build-Animation-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appanimation_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
Qml/build-Color_gradiant-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appcolor_gradiant_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
Qml/build-FocusScope-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appfocusscope_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
Qml/build-Mousetouching-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appmousetouching_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
Qml/build-Qtobject-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
Qml/build-clipping-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  (+4 more)
Qt_Practice/Contol/while_Do/: CMakeLists.txt  main.cpp
Qt_Practice/gouthamiassignemnet/: CMakeLists.txt  main.cpp  student.cpp  student.h
Qt_Practice/signals and slots/Dog/Dog/: CMakeLists.txt  dog.cpp  dog.h  main.cpp  owner.cpp  owner.h
works/: assignemet.c  assignment.c  circular.c  doubleLinedlist.c  func.c  help.c  linkedlist.c  linkedlistmiddleeleprint.c  pointer.c
(+2148 files in other folders)
